@@ -279,7 +279,14 @@ GeForce_RTX_3090                                ALIAS_nv_sm50_or_higher
 ##
 
 Device_738c                                     ALIAS_AMD_MI100
+
+AMD_Radeon_(TM)_RX_480_Graphics                 ALIAS_AMD_RX480
+
+Vega_10_XL/XT_[Radeon_RX_Vega_56/64]            ALIAS_AMD_Vega64
+AMD_Radeon_Vega_64                              ALIAS_AMD_Vega64
+
 Device_73bf                                     ALIAS_AMD_RX6900XT
+AMD_Radeon_RX_6900_XT                           ALIAS_AMD_RX6900XT
 
 #############
 ## ENTRIES ##
@@ -486,22 +493,41 @@ DEVICE_TYPE_GPU                                 *       14500   1       A       
 ##
 ## Find the ideal -n value, then store it here along with the proper compute device name.
 ## Formatting guidelines are availabe at the top of this document.
+##
+## -------------------------------------------------
+##
+## You can also ignore all theoretical derivations and semi-automate the process in the real scenario (I prefer this approach):
+##
+## 1. For example, to find the value for 8900, first create a valid hash for 8900 as follows:
+##
+## $ ./hashcat --example-hashes -m 8900 | grep Example.Hash | grep -v Format | cut -b 25- > tmp.hash.8900
+##
+## 2. Now let it iterate through all -n values to a certain point. In this case, I'm using 200, but in general it's a value that is at least twice that of the multiprocessor. If you don't mind you can just leave it as it is, it just runs a little longer.
+##
+## $ export i=1; while [ $i -ne 201 ]; do echo $i; ./hashcat --quiet tmp.hash.8900 --keep-guessing --self-test-disable --markov-disable --restore-disable --outfile-autohex-disable --wordlist-autohex-disable --potfile-disable --logfile-disable --hwmon-disable --status --status-timer 1 --runtime 28 --machine-readable --optimized-kernel-enable --workload-profile 3 --hash-type 8900 --attack-mode 3 ?b?b?b?b?b?b?b --backend-devices 1 --force -n $i; i=$(($i+1)); done | tee x
+##
+## 3. Determine the highest measured H/s speed. But don't just use the highest value. Instead, use the number that seems most stable, usually at the beginning.
+##
+## $ grep "$(printf 'STATUS\t3')" x | cut -f4 -d$'\t' | sort -n | tail
+##
+## 4. To match the speed you have chosen to the correct value in the "x" file, simply search for it in it. Then go up a little on the block where you found him. The value -n is the single value that begins before the block start. If you have multiple blocks at the same speed, choose the lowest value for -n
+##
 
 ## 4GB
-GeForce_GTX_980                                 *       8900    1      28       A
+GeForce_GTX_980                                 *       8900    1      29       A
 GeForce_GTX_980                                 *       9300    1     128       A
-GeForce_GTX_980                                 *       15700   1      28       A
-GeForce_GTX_980                                 *       22700   1      28       A
+GeForce_GTX_980                                 *       15700   1      24       A
+GeForce_GTX_980                                 *       22700   1      29       A
 
 ## 8GB
-GeForce_GTX_1080                                *       8900    1      14       A
+GeForce_GTX_1080                                *       8900    1      15       A
 GeForce_GTX_1080                                *       9300    1     256       A
-GeForce_GTX_1080                                *       15700   1      14       A
-GeForce_GTX_1080                                *       22700   1      14       A
+GeForce_GTX_1080                                *       15700   1      28       A
+GeForce_GTX_1080                                *       22700   1      15       A
 
 ## 11GB
 GeForce_RTX_2080_Ti                             *       8900    1      68       A
-GeForce_RTX_2080_Ti                             *       9300    1     532       A
+GeForce_RTX_2080_Ti                             *       9300    1     528       A
 GeForce_RTX_2080_Ti                             *       15700   1      68       A
 GeForce_RTX_2080_Ti                             *       22700   1      68       A
 
@@ -509,7 +535,7 @@ GeForce_RTX_2080_Ti                             *       22700   1      68       
 GeForce_RTX_3060_Ti                             *       8900    1      51       A
 GeForce_RTX_3060_Ti                             *       9300    1     256       A
 GeForce_RTX_3060_Ti                             *       15700   1      11       A
-GeForce_RTX_3060_Ti                             *       22700   1      43       A
+GeForce_RTX_3060_Ti                             *       22700   1      51       A
 
 ## 8GB
 GeForce_RTX_3070                                *       8900    1      46       A
@@ -517,26 +543,32 @@ GeForce_RTX_3070                                *       9300    1     368       
 GeForce_RTX_3070                                *       15700   1      22       A
 GeForce_RTX_3070                                *       22700   1      46       A
 
+## 24GB
+GeForce_RTX_3090                                *       8900    1      82       A
+GeForce_RTX_3090                                *       9300    1     984       A
+GeForce_RTX_3090                                *       15700   1      82       A
+GeForce_RTX_3090                                *       22700   1      82       A
+
 ## 4GB
-AMD_Radeon_(TM)_RX_480_Graphics                 *       8900    1      14       A
-AMD_Radeon_(TM)_RX_480_Graphics                 *       9300    1     126       A
-AMD_Radeon_(TM)_RX_480_Graphics                 *       15700   1      14       A
-AMD_Radeon_(TM)_RX_480_Graphics                 *       22700   1      14       A
+ALIAS_AMD_RX480                                 *       8900    1      15       A
+ALIAS_AMD_RX480                                 *       9300    1     232       A
+ALIAS_AMD_RX480                                 *       15700   1      58       A
+ALIAS_AMD_RX480                                 *       22700   1      15       A
 
 ## 8GB
-Vega_10_XL/XT_[Radeon_RX_Vega_56/64]            *       8900    1      28       A
-Vega_10_XL/XT_[Radeon_RX_Vega_56/64]            *       9300    1     442       A
-Vega_10_XL/XT_[Radeon_RX_Vega_56/64]            *       15700   1      28       A
-Vega_10_XL/XT_[Radeon_RX_Vega_56/64]            *       22700   1      28       A
+ALIAS_AMD_Vega64                                *       8900    1      31       A
+ALIAS_AMD_Vega64                                *       9300    1     440       A
+ALIAS_AMD_Vega64                                *       15700   1      53       A
+ALIAS_AMD_Vega64                                *       22700   1      31       A
 
-## 32GB, WF64
-ALIAS_AMD_MI100                                 *       8900    1      76       A
-ALIAS_AMD_MI100                                 *       9300    1     288       A
-ALIAS_AMD_MI100                                 *       15700   1      76       A
-ALIAS_AMD_MI100                                 *       22700   1      76       A
+## 32GB
+ALIAS_AMD_MI100                                 *       8900    1      79       A
+ALIAS_AMD_MI100                                 *       9300    1    1000       A
+ALIAS_AMD_MI100                                 *       15700   1     120       A
+ALIAS_AMD_MI100                                 *       22700   1      79       A
 
-## 16GB, WF32
-ALIAS_AMD_RX6900XT                              *       8900    1      62       A
-ALIAS_AMD_RX6900XT                              *       9300    1     704       A
-ALIAS_AMD_RX6900XT                              *       15700   1      62       A
-ALIAS_AMD_RX6900XT                              *       22700   1      62       A
+## 16GB
+ALIAS_AMD_RX6900XT                              *       8900    1      59       A
+ALIAS_AMD_RX6900XT                              *       9300    1     720       A
+ALIAS_AMD_RX6900XT                              *       15700   1      56       A
+ALIAS_AMD_RX6900XT                              *       22700   1      59       A
